// ============================================================
// DESCAN 2026 — Database Diagram (CORRECTED)
// Stack: Laravel 12 + PostgreSQL 13 + Filament
// Repo : github.com/BpsKabupatenBerau/descan-2026
// ============================================================
// Corrections from original database-design.txt:
//   - `year`     type → smallint  (year is MySQL-only)
//   - `month`    type → tinyint   (month type doesn't exist)
//   - `image`    type → varchar   (store file path, not binary)
//   - `varbinary`type → varchar   (store file path, not binary)
//   - `binary`   type → boolean   (for is_active fields)
//   - `password` type → varchar   (invalid type name)
//   - `tinytext` type → text      (MySQL-only)
//   - `nomor_hp` & `telepon` integer → varchar (phone can start with 0)
//   - Added `slug` to tabel_statistik for URL routing
//   - Added `download_count` to input_publikasi
//   - tahun_infografis renamed to tahun_id (FK consistency)
// ============================================================

Table tahun {
  id        bigint [primary key, increment]
  tahun     smallint [not null, note: 'e.g. 2024, 2025 — smallint replaces MySQL year type']

  Note: 'Master table for year reference. Used across statistik, infografis, publikasi.'
}

Table bulan {
  id    bigint [primary key, increment]
  bulan tinyint [not null, note: '1–12. tinyint replaces non-existent month type']
  nama  varchar(20) [not null, note: 'e.g. Januari, Februari']

  Note: 'Master table for month. Optional — only used in tabel_statistik for monthly breakdowns.'
}

Table kategori_publikasi {
  id       bigint [primary key, increment]
  kategori varchar(255) [not null, note: 'e.g. Monografi, Laporan Keuangan, Perdes, RKPD']

  Note: 'Category list for publications. Managed by admin.'
}

Table users {
  id             bigint [primary key, increment]
  nama_lengkap   varchar(255) [not null]
  email          varchar(255) [unique, not null]
  role           varchar(50)  [not null, default: 'admin', note: 'admin | editor | viewer']
  nomor_hp       varchar(20)  [null, note: 'varchar — phone numbers can start with 0 or contain +62']
  password       varchar(255) [not null, note: 'hashed with bcrypt']
  foto           varchar(500) [null, note: 'path to uploaded avatar in storage/app/public/avatars/']
  remember_token varchar(100) [null]
  created_at     timestamp
  updated_at     timestamp

  Note: 'Admin users managed by Filament auth. foto stores file path, not binary.'
}

Table kategori_statistik {
  id              bigint [primary key, increment]
  judul_kategori  varchar(255) [not null]
  logo_kategori   varchar(500) [null, note: 'path to logo image in storage — not binary']
  user_id         bigint [not null, ref: > users.id]
  is_active       boolean [not null, default: true]
  created_at      timestamp
  updated_at      timestamp

  Note: 'Top-level stat categories: Kependudukan, Sarana, Ekonomi. Created by admin users.'
}

Table kategori_spasial {
  id             bigint [primary key, increment]
  judul_kategori varchar(255) [not null]
  warna_marker   varchar(20)  [not null, default: '#3B82F6', note: 'Hex color for Leaflet marker']
  logo_kategori  varchar(500) [null, note: 'path to icon — not binary']
  user_id        bigint [not null, ref: > users.id]
  is_active      boolean [not null, default: true]
  created_at     timestamp
  updated_at     timestamp

  Note: 'Categories for map points: Pemerintahan, Kesehatan, Pendidikan, Sarana Ibadah, Perbankan.'
}

Table satuan_statistik {
  id           bigint [primary key, increment]
  judul_satuan varchar(100) [not null, note: 'e.g. Jiwa, KK, %, Rp, Unit, Ha']
  user_id      bigint [not null, ref: > users.id]
  created_at   timestamp
  updated_at   timestamp

  Note: 'Measurement units for statistics. Reusable across multiple tabel_statistik.'
}

Table tabel_statistik {
  id            bigint [primary key, increment]
  judul_tabel   varchar(255) [not null]
  slug          varchar(255) [unique, not null, note: 'URL-friendly key for routing']
  kategori_id   bigint [not null, ref: > kategori_statistik.id]
  baris_tabel_ke integer [not null, default: 0, note: 'display order within category']
  tipe_chart    varchar(50) [not null, default: 'bar', note: 'bar|line|pie|doughnut|radar|number|table']
  sumber_data   text [null, note: 'e.g. Disdukcapil 2024, BPS']
  satuan_id     bigint [not null, ref: > satuan_statistik.id]
  periode_data  varchar(50) [null, note: 'Tahunan | Bulanan | Triwulan']
  is_active     boolean [not null, default: true]
  user_id       bigint [not null, ref: > users.id]
  created_at    timestamp
  updated_at    timestamp

  Note: 'Defines the chart/table structure. Actual data rows live in input_data_tabel.'
}

Table input_data_tabel {
  id                 bigint [primary key, increment]
  tabel_statistik_id bigint [not null, ref: > tabel_statistik.id]
  kategori_id        bigint [not null, ref: > kategori_statistik.id]
  tahun_id           bigint [not null, ref: > tahun.id]
  bulan_id           bigint [null, ref: > bulan.id, note: 'null = annual data, set = monthly']
  label_baris        varchar(255) [null, note: 'Row label e.g. Laki-laki, SD, Dusun I']
  nilai              decimal(15,2) [null, note: 'Numeric value for this row/year combination']
  file_excel         varchar(500) [null, note: 'path to Excel file upload — not binary blob']
  is_active          boolean [not null, default: true]
  user_id            bigint [not null, ref: > users.id]
  created_at         timestamp
  updated_at         timestamp

  Note: 'Each row = one data point (label + value + year + optional month). Chart.js reads these rows.'
}

Table input_data_spasial {
  id             bigint [primary key, increment]
  kategori_id    bigint [not null, ref: > kategori_spasial.id]
  nama_lokasi    varchar(255) [not null]
  deskripsi      text [null]
  alamat_lengkap text [null]
  telepon        varchar(20) [null, note: 'varchar — phone numbers can start with 0 or +62']
  website        text [null, note: 'text replaces MySQL-only tinytext']
  latitude       decimal(10,7) [not null, note: 'e.g. -1.2379000']
  longitude      decimal(10,7) [not null, note: 'e.g. 116.8529000']
  extra_data     jsonb [null, note: 'PostgreSQL JSONB for flexible fields: jam_operasional, fasilitas, dll']
  is_active      boolean [not null, default: true]
  user_id        bigint [not null, ref: > users.id]
  created_at     timestamp
  updated_at     timestamp

  Note: 'GPS map points for Leaflet.js. extra_data uses PostgreSQL JSONB for flexible metadata.'
}

Table input_infografis {
  id                   bigint [primary key, increment]
  judul_infografis     varchar(255) [not null]
  slug                 varchar(255) [unique, not null]
  deskripsi_infografis text [null]
  kategori_id          bigint [not null, ref: > kategori_statistik.id]
  tahun_id             bigint [not null, ref: > tahun.id]
  sumber               varchar(255) [null]
  file_infografis      varchar(500) [not null, note: 'path to image in storage — not binary blob']
  is_active            boolean [not null, default: true]
  user_id              bigint [not null, ref: > users.id]
  created_at           timestamp
  updated_at           timestamp

  Note: 'Image infographics. file_infografis stores path under storage/app/public/infografis/.'
}

Table input_publikasi {
  id                    bigint [primary key, increment]
  judul_publikasi       varchar(255) [not null]
  slug                  varchar(255) [unique, not null]
  deskripsi_publikasi   text [null]
  kategori_publikasi_id bigint [not null, ref: > kategori_publikasi.id]
  tahun_id              bigint [not null, ref: > tahun.id]
  penulis               varchar(255) [null]
  file_publikasi        varchar(500) [not null, note: 'path to PDF in storage — not binary blob']
  nama_file_unduhan     varchar(255) [null, note: 'custom filename shown to user on download']
  ukuran_file           bigint [null, note: 'file size in bytes']
  download_count        integer [not null, default: 0, note: 'incremented on every download']
  is_active             boolean [not null, default: true]
  user_id               bigint [not null, ref: > users.id]
  created_at            timestamp
  updated_at            timestamp

  Note: 'PDF publications. download_count tracked via controller. Streamed to browser on download.'
}

Table settings {
  id         bigint [primary key, increment]
  key        varchar(255) [unique, not null, note: 'e.g. site_name, contact_phone, hero_title']
  value      text [null]
  group      varchar(100) [not null, default: 'general', note: 'general|contact|appearance|seo']
  created_at timestamp
  updated_at timestamp

  Note: 'Key-value site config. Cached with Laravel Cache::remember().'
}

// ============================================================
// RELATIONSHIPS
// ============================================================

// Users as creator/owner
Ref: kategori_statistik.user_id > users.id
Ref: kategori_spasial.user_id > users.id
Ref: satuan_statistik.user_id > users.id
Ref: tabel_statistik.user_id > users.id
Ref: input_data_tabel.user_id > users.id
Ref: input_data_spasial.user_id > users.id
Ref: input_infografis.user_id > users.id
Ref: input_publikasi.user_id > users.id

// Statistik chain
Ref: tabel_statistik.kategori_id > kategori_statistik.id
Ref: tabel_statistik.satuan_id > satuan_statistik.id
Ref: input_data_tabel.tabel_statistik_id > tabel_statistik.id
Ref: input_data_tabel.kategori_id > kategori_statistik.id
Ref: input_data_tabel.tahun_id > tahun.id
Ref: input_data_tabel.bulan_id > bulan.id

// Spasial
Ref: input_data_spasial.kategori_id > kategori_spasial.id

// Infografis
Ref: input_infografis.kategori_id > kategori_statistik.id
Ref: input_infografis.tahun_id > tahun.id

// Publikasi
Ref: input_publikasi.kategori_publikasi_id > kategori_publikasi.id
Ref: input_publikasi.tahun_id > tahun.id

// ============================================================
// SAMPLE RECORDS
// ============================================================

Records tahun(id, tahun) {
  1, 2022
  2, 2023
  3, 2024
  4, 2025
}

Records bulan(id, bulan, nama) {
  1,  1,  'Januari'
  2,  2,  'Februari'
  3,  3,  'Maret'
  4,  4,  'April'
  5,  5,  'Mei'
  6,  6,  'Juni'
  7,  7,  'Juli'
  8,  8,  'Agustus'
  9,  9,  'September'
  10, 10, 'Oktober'
  11, 11, 'November'
  12, 12, 'Desember'
}

Records kategori_publikasi(id, kategori) {
  1, 'Monografi'
  2, 'Laporan Keuangan'
  3, 'Profil Desa'
  4, 'Peraturan Desa'
  5, 'RKPD'
  6, 'Data Potensi'
}

Records users(id, nama_lengkap, email, role) {
  1, 'Administrator', 'admin@descan.go.id', 'admin'
}

Records kategori_statistik(id, judul_kategori, user_id, is_active) {
  1, 'Kependudukan', 1, true
  2, 'Sarana',       1, true
  3, 'Ekonomi',      1, true
}

Records satuan_statistik(id, judul_satuan, user_id) {
  1, 'Jiwa',  1
  2, 'KK',    1
  3, '%',     1
  4, 'Rp',    1
  5, 'Unit',  1
  6, 'Ha',    1
}

Records tabel_statistik(id, judul_tabel, slug, kategori_id, tipe_chart, satuan_id, user_id) {
  1, 'Total Penduduk',       'total-penduduk',       1, 'number',   1, 1
  2, 'Jumlah KK',            'jumlah-kk',            1, 'number',   2, 1
  3, 'Tingkat Pendidikan',   'tingkat-pendidikan',   1, 'bar',      1, 1
  4, 'Jenis Kelamin',        'jenis-kelamin',        1, 'doughnut', 1, 1
  5, 'Pertumbuhan Penduduk', 'pertumbuhan-penduduk', 1, 'line',     1, 1
  6, 'Fasilitas Kesehatan',  'fasilitas-kesehatan',  2, 'bar',      5, 1
  7, 'UMKM',                 'umkm',                 3, 'bar',      5, 1
}

Records kategori_spasial(id, judul_kategori, warna_marker, user_id) {
  1, 'Pemerintahan',  '#3B82F6', 1
  2, 'Kesehatan',     '#10B981', 1
  3, 'Pendidikan',    '#F59E0B', 1
  4, 'Sarana Ibadah', '#8B5CF6', 1
  5, 'Perbankan',     '#14B8A6', 1
}
